[front] fix some spacing

--- a/front/src/common/components/input.module.css
+++ b/front/src/common/components/input.module.css
@@ -152,8 +152,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 22px;
-  height: 22px;
+  width: 20px;
+  height: 20px;
   border: 1px solid var(--gray-medium);
   background-color: var(--white);
   border-radius: 4px;
